--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -16,6 +16,17 @@
     <link rel="icon" href="favicon.ico">
 
     <title>Finto AI</title>
+    <meta name="title" content="Finto AI - service for automated subject indexing">
+    <meta name="description" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
+    <meta property="og:title" content="Finto AI - service for automated subject indexing">
+    <meta property="twitter:title" content="Finto AI - service for automated subject indexing">
+    <meta property="og:description" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
+    <meta property="twitterdescription" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://annif.org/static/img/FintoAI-RGB.svg">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:image" content="https://annif.org/static/img/FintoAI-RGB.svg">
+  
     <style>
       body {
         background-color: #80d5e9;
