--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -23,9 +23,9 @@
     <meta property="og:description" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
     <meta property="twitterdescription" content="Finto AI suggests subjects for a given text. It's based on Annif, a tool for automated subject indexing.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://annif.org/static/img/FintoAI-RGB.svg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/NatLibFi/FintoAI/master/ai.finto.fi/static/img/finto-ai-social.png">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:image" content="https://annif.org/static/img/FintoAI-RGB.svg">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/NatLibFi/FintoAI/master/ai.finto.fi/static/img/finto-ai-social.png">
   
     <style>
       body {
