--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -104,6 +104,12 @@
         padding: 2px 7px;
       }
       
+      #text-box #button-file-upload {
+          top: 0px;
+          bottom: 5px;
+          right: 15px;
+      }
+
       #sidebar, #sidebar-tab { background-color: #dff5f9; }
       #sidebar-tabs { background-color: #bfeaf4;}
       #sidebar-tab { float: left; border-top: 2px solid black; }
@@ -278,7 +284,19 @@
   <div class="row mb-md-2">
     <div class="col-md-8 pr-md-3">
       <div id="text-box" class="form-group widget">
-        <label for="text" data-i18n="text-box-label-text">Kuvailtava teksti</label><br>
+        <div class="row">
+          <div class="col-md-6">
+            <label for="text" data-i18n="text-box-label-text">Kuvailtava teksti</label><br>
+          </div>
+          <div class="col-md-6">
+            <div class="file-upload">
+              <button id="button-file-upload" type="button" class="btn"
+               onclick="$('.file-upload-input').trigger('click' )">Lataa tiedosto ja ehdota</button>
+              <input class="file-upload-input" type='file' onchange="readFile(this);"accept=".txt" style="display:none"/>
+            </div>
+          </div>
+        </div>
+
         <div id="text-box-wrapper">
           <textarea class="form-control" rows="20" name="text" id="text"
           data-i18n="[placeholder]text-box-placeholder"
