Add text extraction from various file formats using Textract API

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -292,7 +292,7 @@
             <div class="file-upload">
               <button id="button-file-upload" type="button" class="btn"
                onclick="$('.file-upload-input').trigger('click' )">Lataa tiedosto ja ehdota</button>
-              <input class="file-upload-input" type='file' onchange="readInput(this);"accept=".txt" style="display:none"/>
+              <input class="file-upload-input" type='file' onchange="readInput(this);" style="display:none"/>
             </div>
           </div>
         </div>
