Add color responsiveness to drop area (with hacky draggingLevelCounter)

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -90,6 +90,9 @@
         background-color: #ffffff;
         border: 4px dashed #009cca;
       }
+      .dragging {
+        background-color: #dff5f9 !important;
+      }
       #button-file-upload {
         background-color: #009cca;
         color: black;
