Add visualization of uploading

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -89,11 +89,13 @@
         margin-bottom: 20px;
         background-color: #ffffff;
         border: 4px dashed #009cca;
+        min-height: 180px;
       }
       .dragging {
         background-color: #dff5f9 !important;
       }
       #button-file-upload {
+        margin-bottom: 15px;
         background-color: #009cca;
         color: black;
         border: none;
@@ -302,11 +304,18 @@
         <div class="col-md-12 text-center">
           <div id="file-upload">
             <div>
-              Vedä ja pudota tiedosto tai
+              Vedä ja pudota tiedosto <br> tai
             </div>
-            <button id="button-file-upload" type="button" class="btn btn-primary"
+            <div>
+              <button id="button-file-upload" type="button" class="btn btn-primary"
               onclick="$('.file-upload-input').trigger('click' )">Selaa</button>
-            <input class="file-upload-input" type='file' onchange="readInput(this);" style="display:none"/>
+              <input class="file-upload-input" type='file' onchange="readInput(this);" style="display:none"/>
+            </div>
+            <div id="upload-spinner" class="spinner-border m-1" role="status">
+                <span class="sr-only">Loading...</span>
+            </div>
+            <div id="uploaded-file">
+            </div>
           </div>
         </div>
       </div>
