Add border/outline response for dragging on drop area

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -93,6 +93,9 @@
       }
       .dragging {
         background-color: #dff5f9 !important;
+        border: 3px solid transparent !important;
+        outline-offset: -3px;
+        outline: 4px dashed #009cca;
       }
       #button-file-upload {
         margin-left: 5px;
