Make dragging response class CSS selector more specific

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -97,7 +97,7 @@
         border: 3px dashed #009cca;
         font-weight: normal;
       }
-      .dragging {
+      #dropzone.dragging {
         background-color: #dff5f9 !important;
         border: 3px solid transparent !important;
         outline-offset: -3px;
