Prevent input of unsupported file formats

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -339,8 +339,7 @@
                       <label class="custom-file-label" for="customFile">Valitse tiedosto</label>
                     </div>
                   </div>
-                  <!-- TODO: Which formats to support? -->
-                  Tuetut tiedostomuodot: .pdf, .doc, etc.
+                  <p id="supported-file-formats">Tuetut tiedostomuodot: </p>
                 </div>
               </div>
             </div>
