--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -152,6 +152,7 @@
         top: 45%;
         transform: translate(-50%, 0);
         opacity: 0.35;
+        text-align:center;
       }
       #text-background.dragging {
         opacity: 1.0;
