Add max file size note to backgroud of text-box

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -152,7 +152,8 @@
         top: 45%;
         transform: translate(-50%, 0);
         opacity: 0.35;
-        text-align:center;
+        text-align: center;
+        line-height: 40%;
       }
       #text-background.dragging {
         opacity: 1.0;
@@ -373,6 +374,7 @@
             <!-- Icon license: https://github.com/twbs/icons/blob/main/LICENSE.md -->
             <img src="static/img/cloud-upload.svg" class="img" alt="Lataa tiedosto" width="50" id="upload-icon"></img>
             <span id="supported-file-formats">Tuetut tiedostomuodot: </span>
+            <p>Max. tiedostokoko 50 MB</p>
           </div>
         </div>
       </div>
