Use CSS label selector for bold text-box heading

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -103,8 +103,10 @@
       #text-box {
         background-color: white;
         border-top: 2px solid black;
-        font-weight: bold;
         margin-bottom: 0;
+      }
+      label[for=text] {
+        font-weight: bold;
       }
       #text-box-wrapper {
         position: relative;
