Make file upload button sharp-cornered

--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -102,6 +102,9 @@
         padding: 15px;
         margin-bottom: 15px;
       }
+      .custom-file-label {
+        border-radius: 0;
+      }
       .custom-file-label::after {
         content: 'Selaa';
         border-radius: 0;
