--- a/ai.finto.fi/index.html
+++ b/ai.finto.fi/index.html
@@ -116,6 +116,7 @@
         content: 'Selaa';
         border-radius: 0;
         background: #009cca;
+        color:black;
       }
       #tabs-input-footer {
         background-color: #dff5f9;
@@ -176,7 +177,7 @@
         left: 50%;
         top: 45%;
         transform: translate(-50%, 0);
-        opacity: 0.35;
+        opacity: 0.5;
         text-align: center;
         line-height: 40%;
       }
